; rule to create namelib.ml and namelib_stubs.c from namelib.c.ml
; c_flags.lines from the rule above is used

(rule
 (targets RtMidi.ml RtMidi_stubs.c)
 (deps
  (:first-dep RtMidi.c.ml))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ppx_cstubs} %{first-dep} -o %{targets}))))

(library
 (name RtMidi)
 (foreign_stubs
  (language c)
  (names RtMidi_stubs))
 ; the following preprocess step is only for merlin support in your
 ; editor. You can conditionally enable it during development. It will
 ; do nothing during the "real" compilation step, except checking that
 ; the file was already preprocessed earlier.
 (preprocess
  (pps ppx_cstubs.merlin))
 (libraries ctypes ppx_cstubs)
 (c_library_flags (-lrtmidi)))
